--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   display: grid;
   grid-template-columns: 2fr minmax(30rem, 1fr);
   padding: 10rem;
